prevent-modify-namespaces-and-labels.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: prevent-modify-namespaces-and-labels
spec:
  rules:
  - name: prevent-modify-namespaces-and-labels
    resource:
      resources:
      - namespace
    operations:
      - create
      - update
      - patch
      - delete
    deny:
      message: Managed OpenShift customers may not modify namespaces specified in the [openshift-monitoring/addons-namespaces openshift-monitoring/managed-namespaces openshift-monitoring/ocp-namespaces] ConfigMaps or create namespaces identified by this regular expression (^com$|^io$|^in$). Customers may not set or change the values of these Namespace labels [managed.openshift.io/storage-pv-quota-exempt managed.openshift.io/service-lb-quota-exempt].
      conditions:
      - key: metadata.name
        match:
          pattern: "^(openshift-monitoring/addons-namespaces|openshift-monitoring/managed-namespaces|openshift-monitoring/ocp-namespaces)$"
        ignoreMissing: true
      - key: metadata.name
        match:
          pattern: "^(com|io|in)$"
        ignoreMissing: true
      - key: metadata.labels.managed.openshift.io/storage-pv-quota-exempt
        ignoreMissing: true
      - key: metadata.labels.managed.openshift.io/service-lb-quota-exempt
        ignoreMissing: true
