prevent-object-management.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: prevent-object-management
spec:
  rules:
  - name: prevent-object-management
    match:
      apiGroup:
      - autoscaling.openshift.io
      - config.openshift.io
      - operator.openshift.io
      - network.openshift.io
      - machine.openshift.io
      - admissionregistration.k8s.io
      - splunkforwarder.managed.openshift.io
      - upgrade.managed.openshift.io
      - ocmagent.managed.openshift.io
      - cloudcredential.openshift.io
      - addons.managed.openshift.io
      - cloudingress.managed.openshift.io
      - managed.openshift.io
    resource:
      resources:
      - '*'
    operations:
      - create
      - update
      - patch
      - delete
    deny:
      message: Managed OpenShift customers may not manage any objects in the following APIgroups [autoscaling.openshift.io config.openshift.io operator.openshift.io network.openshift.io machine.openshift.io admissionregistration.k8s.io splunkforwarder.managed.openshift.io upgrade.managed.openshift.io ocmagent.managed.openshift.io cloudcredential.openshift.io addons.managed.openshift.io cloudingress.managed.openshift.io managed.openshift.io], nor may Managed OpenShift customers alter the APIServe [...]
