prevent-techpreviewnoupgrade-featuregate.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: prevent-techpreviewnoupgrade-featuregate
spec:
  background: true
  rules:
    - match:
        any:
          - resources:
              kinds:
                - ClusterVersion
              names:
                - version
      name: prevent-techpreviewnoupgrade-featuregate
      validate:
        deny: {}
        message: >-
          Managed OpenShift Customers may not use TechPreviewNoUpgrade
          FeatureGate that could prevent any future ability to do a y-stream
          upgrade to their clusters
  validationFailureAction: audit
